# Laboratorio_Meccatronica_RoboticaMobile

./: README.md
drone_control/: package.xml  setup.py
drone_control/drone_control/: control_2d.py  full_control.py  hovering.py  lqr_control.py
drone_follow/: package.xml  setup.cfg  setup.py
drone_follow/drone_follow/: debug_tracker.py  yolo_tracker.py
drone_main/: package.xml  setup.cfg  setup.py
drone_main/drone_main/: camera_stream.py  camera_yolo.py
drone_main/launch/: display.launch.py  start.launch.py
drone_main/rviz/: config1.rviz
drone_main/urdf/: x500.urdf
drone_main/worlds/: warehouse.sdf
drone_nav/: package.xml  setup.py
drone_nav/drone_nav/: inner_loop_contr.py  nav6d_pose_bridge.py  path_tracker.py
drone_nav/launch/: start_nav.launch.py
drone_navigation/: package.xml  setup.py
drone_navigation/drone_navigation/: planner.py
drone_slam/: package.xml  setup.py
drone_slam/launch/: start.launch.py
drone_test/: CMakeLists.txt  package.xml
drone_test/launch/: display.launch.py  start.launch.py
drone_test/rviz/: config1.rviz
drone_test/urdf/: x500.urdf
drone_test/worlds/: warehouse.sdf
